--- a/example.ipynb
+++ b/example.ipynb
@@ -6,7 +6,24 @@
    "id": "0af97945-7a75-4aed-9a08-b1cb69738dfe",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"hi\")\n",
+    "print(\"hello world\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9a90747",
+   "metadata": {
+    "vscode": {
+     "languageId": "art"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"hi\")"
+   ]
   }
  ],
  "metadata": {
