--- a/example.ipynb
+++ b/example.ipynb
@@ -2,27 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0af97945-7a75-4aed-9a08-b1cb69738dfe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n",
+      "hello world\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"hi\")\n",
     "print(\"hello world\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9a90747",
-   "metadata": {
-    "vscode": {
-     "languageId": "art"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print(\"hi\")"
    ]
   }
  ],
@@ -42,7 +37,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
