--- a/example.ipynb
+++ b/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "0af97945-7a75-4aed-9a08-b1cb69738dfe",
    "metadata": {},
    "outputs": [
@@ -17,7 +17,11 @@
    ],
    "source": [
     "print(\"hi\")\n",
-    "print(\"hello world\")"
+    "print(\"hello world\")\n",
+    "\n",
+    "def f(x):\n",
+    "    ans=x**2\n",
+    "    return ans"
    ]
   }
  ],
