--- a/example.ipynb
+++ b/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "0af97945-7a75-4aed-9a08-b1cb69738dfe",
    "metadata": {},
    "outputs": [
@@ -11,7 +11,8 @@
      "output_type": "stream",
      "text": [
       "hi\n",
-      "hello world\n"
+      "hello world\n",
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
      ]
     }
    ],
@@ -21,7 +22,9 @@
     "\n",
     "def f(x):\n",
     "    ans=x**2\n",
-    "    return ans"
+    "    return ans\n",
+    "\n",
+    "print([f(x) for x in range(10)])"
    ]
   }
  ],
@@ -30,18 +33,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.4"
   }
  },
  "nbformat": 4,
